--- a/page16.html
+++ b/page16.html
@@ -63,8 +63,8 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-12 col-md-9 video-block">
-                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/HujDEPAWboE?rel=0&amp;amp;mute=1&amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="800" height="600" frameborder="0" allowfullscreen></iframe></div>
-                <p class="mbr-text pt-2 mbr-fonts-style display-4">Для работы надо установить 2 приложения Google Планета Земля и Google Карта<br>Их вам предложат установить в Google Play<br>В Google Планета Земля и Google Карта надо войти в свой аккаунт Google<br><br></p>
+                <div> <center> <video src="C:\Users\maxim\Desktop\сайт\assets\images\инст.mp4" controls width="312" height="560"></video></center></div>
+                <p class="mbr-text pt-2 mbr-fonts-style display-4">Для работы надо установить 2 приложения Google Планета Земля и Google Карта<br>Их вам предложат установить в Google Play<br><br><br></p>
             </div>
         </div>
     </div>
