--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-3 display-1"><strong>Экскурсия по Беларуси</strong></h1>
                 
                 <p class="mbr-text mbr-white mbr-fonts-style display-7">
-                    Приветствуем вас на нашем сайте. Здесь вы можете выбрать место в которое можно отправиться, посмотреть это место виртуально и узнать о нём более подробно и проложить себе маршрут на карте&nbsp;</p>
+                    Здесь у вас есть возможность выбрать место, в которое можно отправиться, посмотреть его виртуально, узнать о нём более подробно и проложить к нему маршрут на карте.&nbsp;</p>
                 <div class="mbr-section-btn mt-3"><a class="btn btn-danger display-4" href="page14.html#top">Выбрать область</a></div>
             </div>
         </div>
