--- a/page16.html
+++ b/page16.html
@@ -63,7 +63,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-12 col-md-9 video-block">
-                <div> <center><iframe width="560" height="315" src="https://www.youtube.com/embed/7541eJg38nY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center></div>
+                <div> <center><iframe width="560" height="315" src="https://www.youtube.com/embed/OUBEmd_uKic" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center></div>
                 <p class="mbr-text pt-2 mbr-fonts-style display-4">Для работы надо установить 2 приложения Google Планета Земля и Google Карты<br>Их вам предложат установить в Google Play<br><br><br></p>
             </div>
         </div>
